-- MySQL Script generated by MySQL Workbench
-- Fri May  1 14:27:44 2020
-- Model: New Model    Version: 1.0
-- MySQL Workbench Forward Engineering

SET @OLD_UNIQUE_CHECKS=@@UNIQUE_CHECKS, UNIQUE_CHECKS=0;
SET @OLD_FOREIGN_KEY_CHECKS=@@FOREIGN_KEY_CHECKS, FOREIGN_KEY_CHECKS=0;
SET @OLD_SQL_MODE=@@SQL_MODE, SQL_MODE='ONLY_FULL_GROUP_BY,STRICT_TRANS_TABLES,NO_ZERO_IN_DATE,NO_ZERO_DATE,ERROR_FOR_DIVISION_BY_ZERO,NO_ENGINE_SUBSTITUTION';

-- -----------------------------------------------------
-- Schema Survey
-- -----------------------------------------------------
DROP SCHEMA IF EXISTS `Survey` ;

-- -----------------------------------------------------
-- Schema Survey
-- -----------------------------------------------------
CREATE SCHEMA IF NOT EXISTS `Survey` DEFAULT CHARACTER SET utf8 ;
USE `Survey` ;

-- -----------------------------------------------------
-- Table `Survey`.`User`
-- -----------------------------------------------------
DROP TABLE IF EXISTS `Survey`.`User` ;

CREATE TABLE IF NOT EXISTS `Survey`.`User` (
  `idUser` INT NOT NULL,
  `email` VARCHAR(64) NOT NULL,
  `name` VARCHAR(64) NOT NULL,
  `surname` VARCHAR(45) NOT NULL,
  `age` INT NULL,
  `phoneNumber` VARCHAR(32) NOT NULL,
  PRIMARY KEY (`idUser`),
  UNIQUE INDEX `idUser_UNIQUE` (`idUser` ASC) VISIBLE,
  UNIQUE INDEX `email_UNIQUE` (`email` ASC) VISIBLE)
ENGINE = InnoDB;


-- -----------------------------------------------------
-- Table `Survey`.`Session`
-- -----------------------------------------------------
DROP TABLE IF EXISTS `Survey`.`Session` ;

CREATE TABLE IF NOT EXISTS `Survey`.`Session` (
  `idSession` INT NOT NULL,
  `start` DATE NOT NULL,
  `stop` DATE NULL,
  `idUser` INT NOT NULL,
  PRIMARY KEY (`idSession`),
  UNIQUE INDEX `idSession_UNIQUE` (`idSession` ASC) VISIBLE,
  INDEX `fk_Session_idx` (`idUser` ASC) VISIBLE,
  CONSTRAINT `fk_Session`
    FOREIGN KEY (`idUser`)
    REFERENCES `Survey`.`User` (`idUser`)
    ON DELETE NO ACTION
    ON UPDATE NO ACTION)
ENGINE = InnoDB;


-- -----------------------------------------------------
-- Table `Survey`.`Survey`
-- -----------------------------------------------------
DROP TABLE IF EXISTS `Survey`.`Survey` ;

CREATE TABLE IF NOT EXISTS `Survey`.`Survey` (
  `id` INT NOT NULL,
  PRIMARY KEY (`id`),
  UNIQUE INDEX `id_UNIQUE` (`id` ASC) VISIBLE)
ENGINE = InnoDB;


-- -----------------------------------------------------
-- Table `Survey`.`SurveyState`
-- -----------------------------------------------------
DROP TABLE IF EXISTS `Survey`.`SurveyState` ;

CREATE TABLE IF NOT EXISTS `Survey`.`SurveyState` (
  `idSurveyState` INT NOT NULL,
  `name` VARCHAR(64) NOT NULL,
  PRIMARY KEY (`idSurveyState`),
  UNIQUE INDEX `idSurveyState_UNIQUE` (`idSurveyState` ASC) VISIBLE)
ENGINE = InnoDB;


-- -----------------------------------------------------
-- Table `Survey`.`Event`
-- -----------------------------------------------------
DROP TABLE IF EXISTS `Survey`.`Event` ;

CREATE TABLE IF NOT EXISTS `Survey`.`Event` (
  `idEvent` INT NOT NULL,
  `date` DATE NOT NULL,
  `idSession` INT NOT NULL,
  `idSurveyState` INT NOT NULL,
  `idSurvey` INT NOT NULL,
  PRIMARY KEY (`idEvent`),
  INDEX `fk_Event_Session_idx` (`idSession` ASC) VISIBLE,
  INDEX `fk_Event_Survey_idx` (`idSurvey` ASC) VISIBLE,
  INDEX `fk_Event_SurveyState_idx` (`idSurveyState` ASC) VISIBLE,
  CONSTRAINT `fk_Event_Session`
    FOREIGN KEY (`idSession`)
    REFERENCES `Survey`.`Session` (`idSession`)
    ON DELETE NO ACTION
    ON UPDATE NO ACTION,
  CONSTRAINT `fk_Event_Survey`
    FOREIGN KEY (`idSurvey`)
    REFERENCES `Survey`.`Survey` (`id`)
    ON DELETE NO ACTION
    ON UPDATE NO ACTION,
  CONSTRAINT `fk_Event_SurveyState`
    FOREIGN KEY (`idSurveyState`)
    REFERENCES `Survey`.`SurveyState` (`idSurveyState`)
    ON DELETE NO ACTION
    ON UPDATE NO ACTION)
ENGINE = InnoDB;


-- -----------------------------------------------------
-- Table `Survey`.`Role`
-- -----------------------------------------------------
DROP TABLE IF EXISTS `Survey`.`Role` ;

CREATE TABLE IF NOT EXISTS `Survey`.`Role` (
  `idRole` INT NOT NULL,
  `name` VARCHAR(64) NOT NULL,
  PRIMARY KEY (`idRole`),
  UNIQUE INDEX `idRole_UNIQUE` (`idRole` ASC) VISIBLE)
ENGINE = InnoDB;


-- -----------------------------------------------------
-- Table `Survey`.`Grant`
-- -----------------------------------------------------
DROP TABLE IF EXISTS `Survey`.`Grant` ;

CREATE TABLE IF NOT EXISTS `Survey`.`Grant` (
  `idGrant` INT NOT NULL,
  `idRole` INT NOT NULL,
  `idSurvey` INT NOT NULL,
  `idUser` INT NOT NULL,
  PRIMARY KEY (`idGrant`),
  INDEX `fk_Grant_User_idx` (`idUser` ASC) VISIBLE,
  INDEX `fk_Grant_Survey_idx` (`idSurvey` ASC) VISIBLE,
  INDEX `fk_Grant__idx` (`idRole` ASC) VISIBLE,
  CONSTRAINT `fk_Grant_User`
    FOREIGN KEY (`idUser`)
    REFERENCES `Survey`.`User` (`idUser`)
    ON DELETE NO ACTION
    ON UPDATE NO ACTION,
  CONSTRAINT `fk_Grant_Survey`
    FOREIGN KEY (`idSurvey`)
    REFERENCES `Survey`.`Survey` (`id`)
    ON DELETE NO ACTION
    ON UPDATE NO ACTION,
  CONSTRAINT `fk_Grant_Role`
    FOREIGN KEY (`idRole`)
    REFERENCES `Survey`.`Role` (`idRole`)
    ON DELETE NO ACTION
    ON UPDATE NO ACTION)
ENGINE = InnoDB;


SET SQL_MODE=@OLD_SQL_MODE;
SET FOREIGN_KEY_CHECKS=@OLD_FOREIGN_KEY_CHECKS;
SET UNIQUE_CHECKS=@OLD_UNIQUE_CHECKS;

-- -----------------------------------------------------
-- Data for table `Survey`.`User`
-- -----------------------------------------------------
START TRANSACTION;
USE `Survey`;
INSERT INTO `Survey`.`User` (`idUser`, `email`, `name`, `surname`, `age`, `phoneNumber`) VALUES (1, 'alexander@gmail.com', 'Alexander', 'Rozghon', 18, '1111111111');
INSERT INTO `Survey`.`User` (`idUser`, `email`, `name`, `surname`, `age`, `phoneNumber`) VALUES (2, 'roman@gmail.com', 'Roman', 'Shpylovyi', 18, '2222222222');
INSERT INTO `Survey`.`User` (`idUser`, `email`, `name`, `surname`, `age`, `phoneNumber`) VALUES (3, 'slava@gmail.com', 'Slava', 'Ivanchenko', 18, '3333333333');
INSERT INTO `Survey`.`User` (`idUser`, `email`, `name`, `surname`, `age`, `phoneNumber`) VALUES (4, 'ruslan@gmail.com', 'Ruslan', 'Fibruk', 18, '4444444444');
INSERT INTO `Survey`.`User` (`idUser`, `email`, `name`, `surname`, `age`, `phoneNumber`) VALUES (5, 'petro@gmail.com', 'Petro', 'Duda', 18, '5555555555');

COMMIT;


-- -----------------------------------------------------
-- Data for table `Survey`.`Session`
-- -----------------------------------------------------
START TRANSACTION;
USE `Survey`;
INSERT INTO `Survey`.`Session` (`idSession`, `start`, `stop`, `idUser`) VALUES (1, '1', '5', 1);
INSERT INTO `Survey`.`Session` (`idSession`, `start`, `stop`, `idUser`) VALUES (2, '2', '6', 2);
INSERT INTO `Survey`.`Session` (`idSession`, `start`, `stop`, `idUser`) VALUES (3, '3', '7', 3);
INSERT INTO `Survey`.`Session` (`idSession`, `start`, `stop`, `idUser`) VALUES (4, '4', '8', 4);
INSERT INTO `Survey`.`Session` (`idSession`, `start`, `stop`, `idUser`) VALUES (5, '5', '9', 5);

COMMIT;


-- -----------------------------------------------------
-- Data for table `Survey`.`Survey`
-- -----------------------------------------------------
START TRANSACTION;
USE `Survey`;
INSERT INTO `Survey`.`Survey` (`id`) VALUES (1);
INSERT INTO `Survey`.`Survey` (`id`) VALUES (2);
INSERT INTO `Survey`.`Survey` (`id`) VALUES (3);
INSERT INTO `Survey`.`Survey` (`id`) VALUES (4);
INSERT INTO `Survey`.`Survey` (`id`) VALUES (5);
INSERT INTO `Survey`.`Survey` (`id`) VALUES (6);
INSERT INTO `Survey`.`Survey` (`id`) VALUES (7);
INSERT INTO `Survey`.`Survey` (`id`) VALUES (8);
INSERT INTO `Survey`.`Survey` (`id`) VALUES (9);
INSERT INTO `Survey`.`Survey` (`id`) VALUES (10);

COMMIT;


-- -----------------------------------------------------
-- Data for table `Survey`.`SurveyState`
-- -----------------------------------------------------
START TRANSACTION;
USE `Survey`;
INSERT INTO `Survey`.`SurveyState` (`idSurveyState`, `name`) VALUES (1, 'Active');
INSERT INTO `Survey`.`SurveyState` (`idSurveyState`, `name`) VALUES (2, 'Closed');
INSERT INTO `Survey`.`SurveyState` (`idSurveyState`, `name`) VALUES (3, 'Editing');
INSERT INTO `Survey`.`SurveyState` (`idSurveyState`, `name`) VALUES (4, 'Completed');

COMMIT;


-- -----------------------------------------------------
-- Data for table `Survey`.`Event`
-- -----------------------------------------------------
START TRANSACTION;
USE `Survey`;
INSERT INTO `Survey`.`Event` (`idEvent`, `date`, `idSession`, `idSurveyState`, `idSurvey`) VALUES (1, '2', 1, 1, 1);
INSERT INTO `Survey`.`Event` (`idEvent`, `date`, `idSession`, `idSurveyState`, `idSurvey`) VALUES (2, '3', 1, 2, 1);
INSERT INTO `Survey`.`Event` (`idEvent`, `date`, `idSession`, `idSurveyState`, `idSurvey`) VALUES (3, '4', 1, 1, 1);
INSERT INTO `Survey`.`Event` (`idEvent`, `date`, `idSession`, `idSurveyState`, `idSurvey`) VALUES (4, '5', 2, 2, 2);
INSERT INTO `Survey`.`Event` (`idEvent`, `date`, `idSession`, `idSurveyState`, `idSurvey`) VALUES (5, '6', 2, 2, 2);
INSERT INTO `Survey`.`Event` (`idEvent`, `date`, `idSession`, `idSurveyState`, `idSurvey`) VALUES (6, '8', 2, 2, 3);
INSERT INTO `Survey`.`Event` (`idEvent`, `date`, `idSession`, `idSurveyState`, `idSurvey`) VALUES (7, '5', 3, 3, 2);
INSERT INTO `Survey`.`Event` (`idEvent`, `date`, `idSession`, `idSurveyState`, `idSurvey`) VALUES (8, '6', 3, 3, 4);
INSERT INTO `Survey`.`Event` (`idEvent`, `date`, `idSession`, `idSurveyState`, `idSurvey`) VALUES (9, '7', 3, 3, 5);
INSERT INTO `Survey`.`Event` (`idEvent`, `date`, `idSession`, `idSurveyState`, `idSurvey`) VALUES (10, '5', 3, 2, 1);
INSERT INTO `Survey`.`Event` (`idEvent`, `date`, `idSession`, `idSurveyState`, `idSurvey`) VALUES (11, '6', 4, 3, 2);
INSERT INTO `Survey`.`Event` (`idEvent`, `date`, `idSession`, `idSurveyState`, `idSurvey`) VALUES (12, '7', 4, 1, 3);

COMMIT;


-- -----------------------------------------------------
-- Data for table `Survey`.`Role`
-- -----------------------------------------------------
START TRANSACTION;
USE `Survey`;
INSERT INTO `Survey`.`Role` (`idRole`, `name`) VALUES (1, 'Admin');
INSERT INTO `Survey`.`Role` (`idRole`, `name`) VALUES (2, 'Respondent');
INSERT INTO `Survey`.`Role` (`idRole`, `name`) VALUES (3, 'Expert');
INSERT INTO `Survey`.`Role` (`idRole`, `name`) VALUES (4, 'Guest');
INSERT INTO `Survey`.`Role` (`idRole`, `name`) VALUES (5, 'Author');
INSERT INTO `Survey`.`Role` (`idRole`, `name`) VALUES (6, 'Collaborator');

COMMIT;


-- -----------------------------------------------------
-- Data for table `Survey`.`Grant`
-- -----------------------------------------------------
START TRANSACTION;
USE `Survey`;
INSERT INTO `Survey`.`Grant` (`idGrant`, `idRole`, `idSurvey`, `idUser`) VALUES (1, 1, 1, 1);
INSERT INTO `Survey`.`Grant` (`idGrant`, `idRole`, `idSurvey`, `idUser`) VALUES (2, 2, 2, 2);
INSERT INTO `Survey`.`Grant` (`idGrant`, `idRole`, `idSurvey`, `idUser`) VALUES (3, 3, 3, 3);
INSERT INTO `Survey`.`Grant` (`idGrant`, `idRole`, `idSurvey`, `idUser`) VALUES (4, 4, 4, 4);
INSERT INTO `Survey`.`Grant` (`idGrant`, `idRole`, `idSurvey`, `idUser`) VALUES (5, 5, 5, 5);
INSERT INTO `Survey`.`Grant` (`idGrant`, `idRole`, `idSurvey`, `idUser`) VALUES (6, 6, 6, 1);

COMMIT;

